--- a/University of advancing techonology/design.css/style.css
+++ b/University of advancing techonology/design.css/style.css
@@ -259,3 +259,15 @@ display: flex;
   width: 900px;
   height: 500px;
 }
+.ul-study {
+
+    display: flex;
+    list-style: none;
+    margin: 30px;
+    justify-content: space-between;
+    padding: 0px 50px ;
+    width: auto;
+    font-size: 30px;
+    color: black;
+    text-decoration: none;
+}
