--- a/University of advancing techonology/design.css/style.css
+++ b/University of advancing techonology/design.css/style.css
@@ -239,33 +239,67 @@ label {
   padding-top: 80px;
   padding-bottom: 80px;
   background-size: cover;
-  background-image:url("https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1932&q=80");
+  background-image: url("https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1932&q=80");
   border-bottom: 2px solid black;
 }
 
-.head-study{
-  font-size: 70px;
+.head-study {
+  font-size: 40px;
   text-align: center;
   background-color: yellow;
   border-top: 2px solid black;
+  border-bottom: 2px solid black;
 }
 .study-text {
-font-size: 40px;
-padding: 80px 30px;
-margin-bottom: 50px;
-display: flex;
+  font-size: 20px;
+  padding: 10px 80px;
+  margin-bottom: 50px;
+  display: flex;
+  font-family: arial;
+  text-align: left;
+  padding-top: 1cm;
 }
 .photo-study {
-  width: 900px;
-  height: 500px;
+  width: 600px;
+  height: 400px;
 }
 .ul-study {
-
-    display: flex;
-    list-style: none;
-    margin: 30px;
-    justify-content: space-between;
-    padding: 0px 50px ;
-    width: auto;
-    font-size: 30px;  
+  display: flex;
+  list-style: none;
+  margin: 30px;
+  justify-content: space-between;
+  padding: 0px 50px;
+  width: auto;
+  font-size: 30px;
+  text-decoration: none;
+  color: black;
+}
+.ul-study a {
+  text-decoration: none;
+  color: black;
+  font-size: 30px;
+}
+@media screen and (max-width: 768px) {
+  .study-text {
+    flex-wrap: wrap;
+  }
+  .photo-study {
+    flex-basis: 100%;
+    width: 90%;
+  }
+  .ul-study {
+    display: block;
+  }
+  .ourstudy h1 {
+    font-size: 80px;
+  }
+  .ul1 {
+    justify-content: unset;
+  }
+  .ul1 a {
+    white-space: nowrap;
+  }
+  .logo-img {
+    width: 2cm;
+  }
 }
