--- a/University of advancing techonology/design.css/style.css
+++ b/University of advancing techonology/design.css/style.css
@@ -204,18 +204,18 @@ Join us page
 }
 
 .box {
-  padding: 20px;
+  padding: 10px;
   border-radius: 5px;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
   margin: 10px;
+  padding: 100px;
 }
 
 .contactform {
   display: flex;
   justify-content: center;
-  transform: scale(1.5);
   background-color: white;
-  padding: 20px 0;
+  margin: 30px;
 }
 
 input,
@@ -229,6 +229,7 @@ label {
   align-items: center;
   justify-content: space-between;
 }
+
 /* Studies 
 */
 .ourstudy {
@@ -239,33 +240,69 @@ label {
   padding-top: 80px;
   padding-bottom: 80px;
   background-size: cover;
-  background-image:url("https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1932&q=80");
+  background-image: url("https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1932&q=80");
   border-bottom: 2px solid black;
 }
 
-.head-study{
+.head-study {
   font-size: 70px;
   text-align: center;
   background-color: yellow;
   border-top: 2px solid black;
 }
 .study-text {
-font-size: 40px;
-padding: 80px 30px;
-margin-bottom: 50px;
-display: flex;
+  font-size: 40px;
+  padding: 80px 30px;
+  margin-bottom: 50px;
+  display: flex;
 }
 .photo-study {
   width: 900px;
   height: 500px;
 }
 .ul-study {
+  display: flex;
+  list-style: none;
+  margin: 30px;
+  justify-content: space-between;
+  padding: 0px 50px;
+  width: auto;
+  font-size: 30px;
+}
 
-    display: flex;
-    list-style: none;
-    margin: 30px;
-    justify-content: space-between;
-    padding: 0px 50px ;
-    width: auto;
-    font-size: 30px;  
+/* About
+*/
+
+.aboutheader {
+  margin: 100px;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.about {
+  display: flex;
+  margin: auto;
+}
+
+.abouttext {
+  flex-basis: 50%;
+  margin: 50px;
+  font-family: arial;
+  line-height: 1.5;
+}
+
+.aboutheader h1 {
+  margin-bottom: 50px;
+}
+
+.aboutimg {
+  flex-basis: 50%;
+  object-fit: cover;
+  background-position: center;
+  margin: 50px;
+}
+
+.aimg {
+  height: 500px;
+  width: 500px;
 }
