--- a/University of advancing techonology/design.css/style.css
+++ b/University of advancing techonology/design.css/style.css
@@ -183,6 +183,8 @@ footer {
   }
 }
 
+/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- /*
+
 /*
 Join us page 
 */
@@ -229,6 +231,7 @@ label {
   align-items: center;
   justify-content: space-between;
 }
+/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- /*
 
 /* Studies 
 */
@@ -273,6 +276,8 @@ label {
   width: auto;
   font-size: 30px;
 }
+
+/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- /*
 
 /* About
 */
