--- a/University of advancing techonology/design.css/style.css
+++ b/University of advancing techonology/design.css/style.css
@@ -320,6 +320,7 @@ label {
 @media screen and (max-width: 768px) {
   .study-text {
     flex-wrap: wrap;
+    padding: 10px 40px;
   }
   .photo-study {
     flex-basis: 100%;
@@ -339,5 +340,11 @@ label {
   }
   .logo-img {
     width: 2cm;
+  }
+  .about {
+    flex-wrap: wrap;
+  }
+  .abouttext {
+    flex-basis: 100%;
   }
 }
