--- a/University of advancing techonology/design.css/style.css
+++ b/University of advancing techonology/design.css/style.css
@@ -183,7 +183,7 @@ footer {
   }
 }
 
-/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- /*
+/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 /*
 Join us page 
@@ -222,7 +222,8 @@ Join us page
 
 input,
 textarea {
-  padding: 10px;
+  height: 5vh;
+  min-width: 200px;
   margin-left: 20px;
 }
 
@@ -230,8 +231,10 @@ label {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  white-space: nowrap;
+  margin: 20px 0px;
 }
-/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- /*
+/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 /* Studies 
 */
@@ -277,7 +280,7 @@ label {
   font-size: 30px;
 }
 
-/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- /*
+/* -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 /* About
 */
@@ -322,6 +325,7 @@ label {
   color: black;
   font-size: 30px;
 }
+
 @media screen and (max-width: 768px) {
   .study-text {
     flex-wrap: wrap;
